be/src/exec/hdfs-table-sink.cc
@@ -55,7 +55,10 @@ const static string& ROOT_PARTITION_KEY =
 HdfsTableSink::HdfsTableSink(const RowDescriptor& row_desc,
     const vector<TExpr>& select_list_texprs,
     const TDataSink& tsink)
-    :  row_desc_(row_desc),
+    :  table_desc_(NULL),
+       default_partition_(NULL),
+       current_row_(NULL),
+       row_desc_(row_desc),
        table_id_(tsink.table_sink.target_table_id),
        skip_header_line_count_(
            tsink.table_sink.hdfs_table_sink.__isset.skip_header_line_count
